# llm-a2a-protocol

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py  observability.py
app/agents/: __init__.py  analyst.py  auditor.py  base.py  coordinator.py
app/database/: __init__.py  redis_client.py
app/protocol/: __init__.py  contract_net.py  event_broker.py  resilience.py  schemas.py
tests/: __init__.py  conftest.py  test_coordinator.py  test_endpoints.py
tests/unit/: test_enterprise_a2a.py
