[tool.poetry]
name = "llm-a2a-protocol"
version = "1.0.0"
description = "Uma engine avançada de comunicação multi-agente e tarefas descentralizadas utilizando o protocolo A2A da Linux Foundation."
authors = ["Cayo Eduardo <cayoesn@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"
redis = "^5.0.6"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
fakeredis = "^2.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=app --cov-report=term-missing"
